[gd_scene load_steps=4 format=2]

[ext_resource path="res://Panel.gd" type="Script" id=1]
[ext_resource path="res://assets/exit button.png" type="Texture" id=2]
[ext_resource path="res://assets/BG.jpg" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.150118
margin_top = 24.3003
margin_right = 0.150146
margin_bottom = 24.3003

[node name="Panel" type="Panel" parent="."]
margin_left = -0.34515
margin_top = 448.654
margin_right = 1026.66
margin_bottom = 579.654
script = ExtResource( 1 )

[node name="OptionButton" type="OptionButton" parent="Panel"]
visible = false
margin_left = 792.691
margin_top = -443.414
margin_right = 1010.69
margin_bottom = -423.414

[node name="Angle_Input" type="LineEdit" parent="Panel"]
margin_left = 75.7974
margin_top = 58.7467
margin_right = 175.797
margin_bottom = 87.7467

[node name="Acute_Button" type="Button" parent="Panel"]
margin_left = 221.679
margin_top = 42.2675
margin_right = 332.679
margin_bottom = 62.2675
text = "Acute"

[node name="Obtuse_Button" type="Button" parent="Panel"]
margin_left = 222.732
margin_top = 72.5677
margin_right = 333.732
margin_bottom = 92.5677
text = "Obtuse"

[node name="Lives_Label" type="Label" parent="Panel"]
margin_left = 372.393
margin_top = 46.9317
margin_right = 485.393
margin_bottom = 88.9317
text = "Lives:"
align = 1
valign = 1
uppercase = true

[node name="Angle_Label" type="Label" parent="Panel"]
margin_left = 80.0
margin_top = 41.8
margin_right = 175.0
margin_bottom = 55.8
text = "Angle"
align = 1
valign = 1

[node name="Angle_Type_Label" type="Label" parent="Panel"]
margin_left = 226.0
margin_top = 23.0
margin_right = 333.0
margin_bottom = 37.0
text = "Angle Type"
align = 1
valign = 1

[node name="Exit_Button" type="Button" parent="Panel"]
editor/display_folded = true
margin_left = 900.185
margin_top = 58.0802
margin_right = 1003.18
margin_bottom = 78.0802
text = "Exit"

[node name="Sprite" type="Sprite" parent="Panel/Exit_Button"]
visible = false
position = Vector2( 57.7501, 13.5 )
scale = Vector2( 0.565, 0.52 )
texture = ExtResource( 2 )

[node name="Confirm_Button" type="Button" parent="Panel"]
margin_left = 80.0527
margin_top = 107.053
margin_right = 338.053
margin_bottom = 127.053
text = "Confirm"

[node name="ErrorDialog" type="AcceptDialog" parent="Panel"]
editor/display_folded = true
margin_left = 312.06
margin_top = -276.654
margin_right = 686.06
margin_bottom = -180.654
window_title = "Error!"

[node name="Label2" type="Label" parent="Panel/ErrorDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 366.0
margin_bottom = 60.0
text = "No Angle lower than 0 and Higher than 180"
align = 1
valign = 1

[node name="Score" type="Label" parent="Panel"]
margin_left = 896.0
margin_top = 8.0
margin_right = 1007.0
margin_bottom = 22.0
text = "Score: 0"

[node name="Difficulty" type="Label" parent="Panel"]
margin_left = 897.61
margin_top = 31.5054
margin_right = 937.61
margin_bottom = 45.5054
text = "Difficulty: 1"

[node name="Game_Over_PopUp" type="PopupPanel" parent="."]
editor/display_folded = true
margin_left = 405.0
margin_top = 171.0
margin_right = 609.0
margin_bottom = 303.0

[node name="Your Dead" type="Label" parent="Game_Over_PopUp"]
margin_left = 4.0
margin_top = 4.0
margin_right = 200.0
margin_bottom = 128.0
text = "Omae wa mou shindeiru"

[node name="Score_Label" type="Label" parent="Game_Over_PopUp"]
margin_left = 4.0
margin_top = 4.0
margin_right = 200.0
margin_bottom = 128.0
text = "Your final score is"

[node name="Label" type="Label" parent="Game_Over_PopUp"]
margin_left = 4.0
margin_top = 4.0
margin_right = 200.0
margin_bottom = 128.0
text = "Score here"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 511.5, 248.25 )
scale = Vector2( 1.285, 0.997 )
texture = ExtResource( 3 )
[connection signal="text_changed" from="Panel/Angle_Input" to="Panel" method="_on_Angle_Input_text_changed"]
[connection signal="pressed" from="Panel/Acute_Button" to="Panel" method="_on_Acute_Button_pressed"]
[connection signal="pressed" from="Panel/Obtuse_Button" to="Panel" method="_on_Obtuse_Button_pressed"]
[connection signal="pressed" from="Panel/Exit_Button" to="Panel" method="_on_Exit_Button_pressed"]
[connection signal="pressed" from="Panel/Confirm_Button" to="Panel" method="_on_Confirm_Button_pressed"]
